# peasant

./: .gitignore  Cargo.toml  build.rs  cpp.Dockerfile  example.html  index.html  package-lock.json  package.json  state.ts  tsconfig.json  vite.config.js
cli/: Cargo.toml
cli/src/: main.rs
libraw/: Cargo.toml  Dockerfile  Makefile  bindings.cpp  build.rs
libraw/src/: bindings.rs  lib.rs
pixlproc/: Cargo.toml
pixlproc/src/: lib.rs  rgb.rs
pixlproc/src/processor/: invert.rs  mod.rs  resize.rs
raw/: .gitignore  Makefile  build.sh  raw.cpp
resize/: .gitignore  Cargo.toml
resize/pkg/: resize.d.ts  resize.js  resize_bg.wasm  resize_bg.wasm.d.ts
resize/src/: lib.rs
src/: classname-hook.ts  clean-set.ts  dag.ts  image-data-utils.js  image.ts  index.html  main.js  main.ts  main.tsx  observable-utilts.ts  operations.ts  raw-decoder.js  raw-decoder.ts  resizer.js  shader.wgsl  tone-curve.ts  use-async-reducer.ts  utils.ts  webgpu.js  webgpu.ts
src/components/app/: index.tsx
src/components/controls/: index.module.css  index.tsx
src/components/decoder-control/: index.tsx
src/components/editor/: index.module.css  index.tsx
src/components/image-view/: index.tsx
src/core/: image.ts  processing.ts  state.ts
src/decoder/: index.ts
src/gpu/: gpu.ts  index.ts  operations.ts
src/libraw/: .gitignore  Cargo.toml  Makefile  bindings.cpp  build.rs  example.html
src/processors/: image.ts  index.ts  processor-ui.ts
src/raw-decoder/: index.ts
src/wgsl/: bindings.wgsl  colorspaces.wgsl  curves.wgsl  processing.wgsl  render.wgsl  shader.wgsl
(+18 files in other folders)
