[package]
name = "cli"
version = "0.1.0"
authors = ["Surma <surma@surma.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libraw = { path = "../libraw" }
pixlproc = { path = "../pixlproc" }
png = "0.16.7"
rayon = "1.4.0"


