[package]
name = "resize"
version = "0.1.0"
authors = ["Surma <surma@surma.link>"]
publish = false
edition = "2021"

[lib]
#crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
resize = "0.7.2"
rgb = "0.8.31"
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
# web-sys = { version = "0.3.55", features = ["console"] }
cfg-if = "1.0.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
